making main content

--- a/styles.css
+++ b/styles.css
@@ -40,15 +40,38 @@ li {
     color: #ffff;
     font-weight: 700;
     font-size: 79px;
-    transform: translate(820px, 244px);
+    transform: translate(720px, 260px);
 }
 .headertxt {
     position: absolute;
 }
 .headerp {
-    transform: translate(900px, 275px);
+    transform: translate(850px, 275px);
     font-weight: 400;
     font-size: 19px;
     color: #ffff;
 }
+.main {
+    display: flex;
+}
+.leftdiv p {
+       font-weight: 400;
+       font-size: 17px;
+       color: #636060;
+}
+.leftdiv {
+    padding-left: 100px;
+    padding-top: 84px;
+}
+.leftdiv h1 {
+    padding-top: 9px;
+    font-weight: 400;
+    font-size: 28px;
+}
+.mainp {
+    padding-top: 37px;
+    width: 235px;
+    height: 115px;
+}
+.mainright {}
 
