--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ li {
 }
 .headerimg {
     margin-top: 18px;
-    width: 1920px;
+    width: 100%;
     height: 606px;
 }
 .header {
@@ -60,7 +60,7 @@ li {
        color: #636060;
 }
 .leftdiv {
-    padding-left: 100px;
+    padding-left: 200px;
     padding-top: 84px;
 }
 .leftdiv h1 {
@@ -73,5 +73,23 @@ li {
     width: 235px;
     height: 115px;
 }
-.mainright {}
-
+.mainright p { 
+    width: 286px;
+    height: 63px;
+    font-weight: 400;
+    font-size: 18px;
+    color: #636060;
+}
+.mainright h1 {
+    font-weight: 400;
+    font-size: 19px;
+    color: #343232;
+}
+.mainright {
+    display: flex;
+    flex-wrap: wrap;
+    width: 1143px;
+    gap: 33px;
+    padding-top: 84px;
+    padding-left: 83px;
+}
